# anyrun

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
anyrun/: __init__.py  cli.py  mcp_server.py  models.py  toolbox.py
anyrun/data/: toolbox.json
anyrun/docker/: __init__.py  async_executor.py  container.py  executor.py  paths.py
anyrun/evolution/: __init__.py  engine.py  lifecycle.py  repair.py  tracker.py
anyrun/tracing/: __init__.py  collector.py  extractor.py  patterns.py  store.py
docs/: index.html
src/anyrun/: __init__.py  cli.py  config.py  mcp_server.py  toolbox.py
src/anyrun/data/: toolbox.json
src/anyrun/docker/: __init__.py  async_executor.py  container.py  executor.py
src/anyrun/evolution/: __init__.py  engine.py  repair.py  tracker.py
src/anyrun/tracing/: __init__.py  collector.py  extractor.py  models.py  patterns.py  store.py
tests/: test_mcp_e2e.py  test_mcp_server.py
