[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anyrun-agent"
version = "1.0.2"
description = "Self-evolving execution engine for AI Agents — Docker sandbox + full observability + pattern discovery + autonomous skill evolution"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["ai-agent", "docker", "sandbox", "tool-execution", "agent-evolution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "docker>=7.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
]

[project.urls]
Homepage = "https://github.com/appcom2016/anyrun"
Repository = "https://github.com/appcom2016/anyrun"

[tool.setuptools.packages.find]
include = ["anyrun*"]
exclude = ["skills*", "docs*"]

[tool.setuptools.package-data]
anyrun = ["data/*.json"]

[project.scripts]
anyrun = "anyrun.cli:main"
